@@ -14,6 +14,7 @@ Fix broken styling when dragging a panel pane.
 Integrate with CTools tab system so we can add edit tabs to all our panel pages.
 #454208: pgsql does not support concat(), so use || instead for postgres.
 #445828: Remove "Settings" link if a content type has no settings form.
+#460200: Allow regions and columns that have only 'fixed' width items. Disallow changing a 'fixed' item to 'fluid.'
 
 Panels 6.x-3.0-beta1
 ====================
